# gcp-workshop

./: .gitignore  README.md  airport.py  average_delay_pipeline.py  field_number_lookup.py  flight.py  pyproject.toml  requirements.txt  utils.py
functions/: parse_flight_record_fn.py
options/: custom_options.py
simulation/: install_packages.sh  simulate_feb2015.sh  simulation.py
